--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Curtis' ePortfolio site
+description: This page is intended to exhibit my skills to any interested parties.
